<resources>
    <string name="app_name">Resultados do Brasil</string>
    <string name="titulo_resultados">Resultados do Brasil</string>
    <string name="tela_titulo_resultado">Nome partida</string>
    <string name="time_brasil">Time01</string>
    <string name="time_adversario">Time02</string>
    <string name="icon_versus">X</string>
    <string name="nome_transmissao">Transmissão</string>
    <string name="placar_brasil">1</string>
    <string name="placar_adversario">0</string>
    <string name="tempo_futebol">tempo</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
