<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tela_titulo_resultado" />

    <TextView

    <

    <

    <

    <

    <

    <

    < HEAD
        android:id="@+id/textBrasil"
    =======
    android:id="@+id/textView7"
    >>>>>>> 22b901c7482d94f088a1908d21de04948a5b0a11
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="52dp"
    android:layout_marginLeft="52dp"
    android:layout_marginTop="64dp"
    android:text="@string/time_brasil"
    android:textSize="36sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView

    <

    <

    <

    <

    <

    <

    < HEAD
        android:id="@+id/textAdversario"
    =======
    android:id="@+id/textView8"
    >>>>>>> 22b901c7482d94f088a1908d21de04948a5b0a11
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="64dp"
    android:layout_marginEnd="68dp"
    android:layout_marginRight="68dp"
    android:text="@string/time_adversario"
    android:textSize="36sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/icon_versus"
        android:textSize="36sp"

    <

    <

    <

    <

    <

    <

    < HEAD
        app:layout_constraintEnd_toStartOf="@+id/textAdversario"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toEndOf="@+id/textBrasil"
    =======
    app:layout_constraintEnd_toStartOf="@+id/textView8"
    app:layout_constraintHorizontal_bias="0.539"
    app:layout_constraintStart_toEndOf="@+id/textView7"
    >>>>>>> 22b901c7482d94f088a1908d21de04948a5b0a11
    app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="496dp"
        android:text="@string/nome_transmissao"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp" />
</LinearLayout>